The Saxxy, new all-class weapon
Ha! My scripts could handle it without issues and every
class gets the correct melee weapon.

--- a/translations/es/weapons.phrases.tf.txt
+++ b/translations/es/weapons.phrases.tf.txt
@@ -308,6 +308,10 @@
 	{
 		"es"	"Katana del Medio Zatoichi"
 	}
+	"TF_SAXXY"
+	{
+		"es"	"Saxxy"
+	}
 	"TF_SPACECHEM_FISHCAKE"
 	{
 		"es"	"Barrita de Pescado"
