--- a/translations/fr/weapons.phrases.tf.txt
+++ b/translations/fr/weapons.phrases.tf.txt
@@ -308,6 +308,10 @@
 	{
 		"fr"	"Demi-Zatoichi"
 	}
+	"TF_SAXXY"
+	{
+		"fr"	"Le Saxxy"
+	}
 	"TF_SPACECHEM_FISHCAKE"
 	{
 		"fr"	"Bâtonnet de Poisson"
