--- a/translations/it/weapons.phrases.tf.txt
+++ b/translations/it/weapons.phrases.tf.txt
@@ -308,6 +308,10 @@
 	{
 		"it"	"Lo Spadaccino Mancato"
 	}
+	"TF_SAXXY"
+	{
+		"it"	"Il Saxxy"
+	}
 	"TF_SPACECHEM_FISHCAKE"
 	{
 		"it"	"Tortina di Pesce"
